test/langtools/tools/javac/superInit/SuperInitBad12.out
SuperInitBad12.java:10:9: compiler.err.non.canonical.constructor.invoke.other.constructors: SuperInitBad12.Record
1 error
